Fix overflow product

--- a/src/components/AwCardProduct/styles/awcardproduct.module.css
+++ b/src/components/AwCardProduct/styles/awcardproduct.module.css
@@ -4,7 +4,7 @@
     border-radius: .5rem .5rem 0 0 ;
     background: #f5f5f5;
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    }
    
