--- a/src/pages/AwProducts/styles/awproduct.module.css
+++ b/src/pages/AwProducts/styles/awproduct.module.css
@@ -78,6 +78,7 @@
         grid-template-columns: repeat(1, 100%);
         align-items: center;
         justify-items: center;
+        margin-top: 5%;
         
     }
     .contact{
@@ -96,10 +97,11 @@
         height: 70vh;
         padding: 5%;
         box-sizing: border-box;
+    
+        overflow: hidden;
     }
     .title{
         font-family: var(--title);
-        
     }
     
     .section_top{
@@ -111,11 +113,14 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        overflow: hidden;
+        
     }
     .steps{
         font-family: var(--text);
         font-size: 20px;
         line-height: 40px;
+        
         
     }
     .cancel{
